<resources>
    <string name="app_name">我也是微信</string>

    <!-- Menu item -->
    <string name="menu_item_group_chat">发起群聊</string>
    <string name="menu_item_add_friend">添加好友</string>
    <string name="menu_item_richscan">扫一扫</string>


    <!-- BaseFragment -->
    <string name="hard_to_loading">努力加载中...</string>

    <!-- fragment_setting.xml -->
    <string name="setting_notifySetting">提醒设置</string>
    <string name="setting_fragment_checkUpdate">检查更新</string>
    <string name="setting_fragment_logout">注销</string>
    <!-- FragmentSetting -->
    <string name="setting_fragment_title">设置</string>

    <!--UserLoginActivity -->
    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="login">登录</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_can_not_null">密码不能为空</string>

    <!-- UserRegisterActivity -->
    <string name="chat_common_username">用户名</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <!-- MainActivity -->
    <string name="conversation_messages">会话</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">设置</string>
    <string name="discover_title">发现</string>

    <!-- Utils-->
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="discover_metres">米</string>
    <string name="utils_kilometres">公里</string>

    <!-- HeaderLayout -->
    <string name="chat_common_emptyStr" />

    <!-- contact_fragment_header_layout-->
    <string name="contact_new_friends">新朋友</string>
    <string name="conversation_group">群组</string>

    <!-- -->
    <string name="contact_search">搜索</string>

    <!-- load_more_footer_layout.xml -->
    <string name="load_more_footer_hint_normal">查看更多</string>

    <!-- ContactAddFriendActivity -->
    <string name="activity_add_friend_title">添加朋友</string>

    <!-- contact_person_info_activity.xml -->
    <string name="chat_common_avatar">头像</string>
    <string name="contact_account">账号 </string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>

    <!-- ContactPersonInfoActivity-->
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>

    <!-- AddRequestManager -->
    <string name="invitation_action">com.avoscloud.chat.INVITATION_ACTION</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>

    <!-- ContactNewFriendActivity -->
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="common_sure">确定</string>
    <string name="chat_common_cancel">取消</string>

    <!-- FragmentContact-->
    <string name="contact_deleteContact">删除联系人</string>

    <!-- chat_record_layout.xml -->
    <string name="chat_record_button_slideUpToCancel">手指上滑，取消发送</string>

    <!-- RecordButton -->
    <string name="chat_cancelRecord">取消录音</string>
    <string name="chat_record_button_pleaseSayMore">说多点吧～</string>
    <string name="chat_record_button_releaseToCancel">松开手指，取消录音</string>

    <!-- chat_bottom_add_layout.xml -->
    <string name="chat_bottom_picture">照片</string>
    <string name="chat_bottom_camera">拍摄</string>
    <string name="chat_bottom_location">位置</string>

    <!-- chat_emotion_item -->
    <string name="chat_emotion">表情</string>

    <!-- InputBottomBar -->
    <string name="message_is_null">消息不能为空</string>

    <!-- chat_bottom_text_layout.xml -->
    <string name="chat_bottom_record_layout_pressToRecord">按住录音</string>

    <!-- ChatFragment -->
    <string name="chat_activity_select_picture">选择图片</string>

    <!-- ChatRoomActivity -->
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <!-- MessageHandler -->
    <string name="unspport_message_type">暂不支持此消息类型</string>

    <!-- LocationActivity -->
    <string name="chat_position">位置</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_pleaseCheckNetwork">请检查网络</string>
    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_cannotFindResult">抱歉，未能找到结果</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="chat_geoIsSame">获取坐标相同</string>

    <!-- UpdateService -->
    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <!-- FragmentDiscover -->
    <string name="fragment_discover_music_name">音乐</string>
    <string name="fragment_discover_weather_name">天气</string>
    <string name="fragment_discover_title_name">发现</string>
    <string name="fragment_discover_nearby_people">附近的人</string>
    <string name="fragment_discover_rici_scan">扫一扫</string>
    <string name="fragment_discover_friend_circle">朋友圈</string>

    <!-- activity_weather.xml-->
    <string name="activity_weather_default_location">广州</string>
    <string name="activity_weather_error_message">出错了</string>
    <string name="activity_weather_liveweather">实时天气</string>
    <string name="activity_weather_ultraviolet">紫外线：</string>
    <string name="activity_weather_pm">PM2.5:</string>
    <string name="activity_weather_title_future_threeday">未来三天的天气状况</string>

    <!-- WeatherActivity -->
    <string name="activity_weather_reccode_error">输入的城市名有误，请重新输入</string>
    <string name="activity_weather_refresh_success">天气数据更新成功</string>
    <string name="activity_weather_alertdialog_title">请输入城市名</string>
    <string name="activity_weather_alertdialog_confirm">确定</string>
    <string name="activity_weather_alertdialog_cancel">取消</string>
    <string name="activity_weather_alertdialog_empty">城市名不能为空</string>

    <!-- ConversationDetailActivity -->
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_title">详情</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>

    <!-- update_content_layout.xml-->
    <string name="chat_common_please_input_hint">请输入{0}</string>

    <!-- UpdateContentActivity -->
    <string name="chat_common_change_title">{0}</string>

</resources>
