<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/chat_common_username" />

        <EditText
            android:id="@+id/activity_register_et_username"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/entry_register_activity_password" />

        <EditText
            android:id="@+id/activity_register_et_pwd"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/ensurePassword" />

        <EditText
            android:id="@+id/activity_register_et_ensurepwd"
            style="@style/Register_Edit"
            android:hint="@string/ensurePasswordHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_register_btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/common_btn"
        android:text="@string/register"
        android:textColor="@color/chat_base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>