<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/common_horizontal_margin"
        android:paddingLeft="@dimen/common_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="@dimen/icon_size_width"
            android:layout_height="@dimen/icon_size_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:src="@mipmap/ic_launcher"/>

        <EditText
            android:id="@+id/activity_login_et_username"
            style="@style/EditText.UserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginTop="40dp"
            android:drawableLeft="@mipmap/login_icon_account"
            android:drawablePadding="25dip"
            android:hint="@string/login_username_hint"
            android:paddingLeft="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd"/>

        <EditText
            android:id="@+id/activity_login_et_password"
            style="@style/EditText.Password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/activity_login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="保存密码"/>

            <CheckBox
                android:id="@+id/activity_login_cb_autologin"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="自动登录"/>

        </LinearLayout>

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/common_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/chat_base_color_text_white"
            android:textSize="@dimen/text_size_large"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/not_have_account"
                android:textColor="@color/base_color_text_gray"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/activity_login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/register_rightnow"
                android:textColor="@color/entry_blue"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
